@@ -3,6 +3,8 @@ console-setup (1.45) UNRELEASED; urgency=low
   [ Anton Zinoviev ]
   * Do not issue warnings when writing cached.kmap.gz and /etc is mounted
     read-only.
+  * Detection of Atari keyboards.  Use case-insensitive grep to make the
+    tests more robust.
 
  -- Anton Zinoviev <zinoviev@debian.org>  Sun, 12 Jul 2009 15:12:31 +0300
 
